Fix script tag paths in insex.html

--- a/insex.html
+++ b/insex.html
@@ -605,7 +605,7 @@
 
   </footer>
 
-  <script src="/i18n.js"></script>
+  <script src="i18n.js"></script>
   <script>
     // Load slider images from localStorage
     (function loadSliderImages() {
@@ -645,7 +645,7 @@
       }
     })();
   </script>
-  <script src="/main.js"></script>
+  <script src="main.js"></script>
   <script>
     // Check user session and control UI elements
     (function() {
