--- a/insex.html
+++ b/insex.html
@@ -68,7 +68,7 @@
         <div class="p-4">
           <h2 class="text-xl font-bold mt-2 text-center">fatota ranch </h2>
           <div class="text-center mt-3 flex justify-between items-center">
-            <button title="Add to Cart" class="add-to-cart group cursor-pointer outline-none hover:rotate-90 duration-300" data-name="fatota ranch" data-price="120" data-image="/imgs/480251412_1025304616191865_8716382892094081518_n.jpg" data-description="ساندويتش لذيذ مع صوص رانش وخضار طازجة" data-sizes='[{"label":"صغير","price":90},{"label":"وسط","price":120},{"label":"كبير","price":150}]'>
+            <button title="Add to Cart" class="add-to-cart group cursor-pointer outline-none hover:rotate-90 duration-300" data-name="fatota ranch" data-price="120" data-image="imgs/480251412_1025304616191865_8716382892094081518_n.jpg" data-description="ساندويتش لذيذ مع صوص رانش وخضار طازجة" data-sizes='[{"label":"صغير","price":90},{"label":"وسط","price":120},{"label":"كبير","price":150}]'>
               <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24" class="stroke-zinc-400 fill-none group-hover:fill-zinc-800 group-active:stroke-zinc-200 group-active:fill-zinc-600 group-active:duration-0 duration-300">
                 <path d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z" stroke-width="1.5"></path>
                 <path d="M8 12H16" stroke-width="1.5"></path>
@@ -86,7 +86,7 @@
         <div class="p-4">
           <h2 class="text-xl  font-bold mt-2 text-center"> juciy-lucy</h2>
           <div class="text-center mt-3 flex justify-between items-center ">
-            <button title="Add to Cart" class="add-to-cart group cursor-pointer outline-none hover:rotate-90 duration-300" data-name="juciy-lucy" data-price="120" data-image="/imgs/480771397_1015910663797927_2008338317843381204_n.jpg" data-description="برغر عصير مع جبنة ذائبة ونكهات مميزة" data-sizes='[{"label":"صغير","price":95},{"label":"وسط","price":120},{"label":"كبير","price":155}]'>
+            <button title="Add to Cart" class="add-to-cart group cursor-pointer outline-none hover:rotate-90 duration-300" data-name="juciy-lucy" data-price="120" data-image="imgs/480771397_1015910663797927_2008338317843381204_n.jpg" data-description="برغر عصير مع جبنة ذائبة ونكهات مميزة" data-sizes='[{"label":"صغير","price":95},{"label":"وسط","price":120},{"label":"كبير","price":155}]'>
               <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24" class="stroke-zinc-400 fill-none group-hover:fill-zinc-800 group-active:stroke-zinc-200 group-active:fill-zinc-600 group-active:duration-0 duration-300">
                 <path d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z" stroke-width="1.5"></path>
                 <path d="M8 12H16" stroke-width="1.5"></path>
@@ -110,7 +110,7 @@
               class="add-to-cart"
               data-name="O-mashroom"
               data-price="120"
-              data-image="/imgs/481107802_1021570963231897_1989374855717209178_n.jpg"
+              data-image="imgs/481107802_1021570963231897_1989374855717209178_n.jpg"
               data-description="فطر طازج مع صوص كريمي وطعم رائع"
               data-sizes='[{"label":"صغير","price":100},{"label":"وسط","price":130},{"label":"كبير","price":160}]'
             >
@@ -251,7 +251,7 @@
         <div class="p-4">
           <h2 class="text-xl font-bold mt-2 text-center">French fries </h2>
           <div class="text-center mt-3 flex justify-between items-center">
-            <button title="Add to Cart" class="add-to-cart group cursor-pointer outline-none hover:rotate-90 duration-300" data-name="French fries" data-price="120" data-image="/imgs/197472.jpg" data-description="فرنش فريز لذيذ مع صوص رانش وخضار طازجة" data-sizes='[{"label":"صغير","price":90},{"label":"وسط","price":120},{"label":"كبير","price":150}]'>
+            <button title="Add to Cart" class="add-to-cart group cursor-pointer outline-none hover:rotate-90 duration-300" data-name="French fries" data-price="120" data-image="imgs/197472.jpg" data-description="فرنش فريز لذيذ مع صوص رانش وخضار طازجة" data-sizes='[{"label":"صغير","price":90},{"label":"وسط","price":120},{"label":"كبير","price":150}]'>
               <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24" class="stroke-zinc-400 fill-none group-hover:fill-zinc-800 group-active:stroke-zinc-200 group-active:fill-zinc-600 group-active:duration-0 duration-300">
                 <path d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z" stroke-width="1.5"></path>
                 <path d="M8 12H16" stroke-width="1.5"></path>
@@ -265,11 +265,11 @@
 
     
       <div class="wishcard w-45 p-0 text-white">
-        <img class="w-full" src="imgs/v co;a.jpg" alt="فتوته رانش">
+         <img class="w-full" src="imgs/v-coa.jpg" alt="فتوته رانش">
         <div class="p-4">
           <h2 class="text-xl font-bold mt-2 text-center"> v-cola</h2>
           <div class="text-center mt-3 flex justify-between items-center">
-            <button title="Add to Cart" class="add-to-cart group cursor-pointer outline-none hover:rotate-90 duration-300" data-name="v-cola" data-price="25" data-image="/imgs/v co;a.jpg" data-description="برغر عصير مع جبنة ذائبة ونكهات مميزة" data-sizes='[{"label":"صغير","price":40},{"label":"وسط","price":45},{"label":"كبير","price":50}]'>
+             <button title="Add to Cart" class="add-to-cart group cursor-pointer outline-none hover:rotate-90 duration-300" data-name="v-cola" data-price="25" data-image="imgs/v-coa.jpg" data-description="برغر عصير مع جبنة ذائبة ونكهات مميزة" data-sizes='[{"label":"صغير","price":40},{"label":"وسط","price":45},{"label":"كبير","price":50}]'>
               <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24" class="stroke-zinc-400 fill-none group-hover:fill-zinc-800 group-active:stroke-zinc-200 group-active:fill-zinc-600 group-active:duration-0 duration-300">
                 <path d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z" stroke-width="1.5"></path>
                 <path d="M8 12H16" stroke-width="1.5"></path>
@@ -293,7 +293,7 @@
               class="add-to-cart"
               data-name="O-mashroom"
               data-price="120"
-              data-image="imgs/481107802_1021570963231897_1989374855717209178_n.jpg"
+              data-image="imgs/481107802_1021570963231897_1989374855717209178_n.jpg"  
               data-description="بطاطس مقلية مع جبنة ذائبة"
               data-sizes='[{"label":"صغير","price":85},{"label":"وسط","price":100},{"label":"كبير","price":120}]'
             >
@@ -641,7 +641,7 @@
               ? slide.image.replace(/^\/+/, '')
               : slide.image;
             slideDiv.innerHTML = `
-              <img src="${imgSrc}" alt="${slide.title || 'صورة'}" onerror="this.onerror=null; this.src='imgs/placeholder.jpg';" />
+              <img src="${imgSrc}" alt="${slide.title || 'صورة'}" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 400 200%22%3E%3Crect width=%22400%22 height=%22200%22 fill=%22%23f3f4f6%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 fill=%22%239ca3af%22 font-family=%22Arial%22 font-size=%2224%22%3EImage%20not%20available%3C/text%3E%3C/svg%3E';" />
               ${overlayContent}
             `;
             sliderTrack.appendChild(slideDiv);
