--- a/insex.html
+++ b/insex.html
@@ -265,7 +265,7 @@
 
     
       <div class="wishcard w-45 p-0 text-white">
-         <img class="w-full" src="imgs/v-coa.jpg" alt="فتوته رانش">
+         <img class="w-full" src="imgs/v-coa.jpg" alt="v-cola">
         <div class="p-4">
           <h2 class="text-xl font-bold mt-2 text-center"> v-cola</h2>
           <div class="text-center mt-3 flex justify-between items-center">
