--- a/insex.html
+++ b/insex.html
@@ -269,7 +269,7 @@
         <div class="p-4">
           <h2 class="text-xl font-bold mt-2 text-center"> v-cola</h2>
           <div class="text-center mt-3 flex justify-between items-center">
-             <button title="Add to Cart" class="add-to-cart group cursor-pointer outline-none hover:rotate-90 duration-300" data-name="v-cola" data-price="25" data-image="imgs/v-coa.jpg" data-description="برغر عصير مع جبنة ذائبة ونكهات مميزة" data-sizes='[{"label":"صغير","price":40},{"label":"وسط","price":45},{"label":"كبير","price":50}]'>
+             <button title="Add to Cart" class="add-to-cart group cursor-pointer outline-none hover:rotate-90 duration-300" data-name="v-cola" data-price="25" data-image="imgs/v-cola.jpg" data-description="برغر عصير مع جبنة ذائبة ونكهات مميزة" data-sizes='[{"label":"صغير","price":40},{"label":"وسط","price":45},{"label":"كبير","price":50}]'>
               <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24" class="stroke-zinc-400 fill-none group-hover:fill-zinc-800 group-active:stroke-zinc-200 group-active:fill-zinc-600 group-active:duration-0 duration-300">
                 <path d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z" stroke-width="1.5"></path>
                 <path d="M8 12H16" stroke-width="1.5"></path>
