--- a/dashboard.html
+++ b/dashboard.html
@@ -1154,9 +1154,9 @@
         // If no slider images exist, initialize with default images from HTML
         if (sliderImages.length === 0) {
           sliderImages = [
-            { id: 1, image: '/imgs/etra222.jpg', title: '', description: '' },
-            { id: 2, image: '/imgs/493690584_1064379248951068_3791806314464835859_n.jpg', title: 'تشكيلة ساندويتشات', description: 'نكهات متنوعة ترضي الجميع' },
-            { id: 3, image: '/imgs/481107802_1021570963231897_1989374855717209178_n.jpg', title: 'وجبات شهية', description: 'جودة عالية وسعر مناسب' }
+            { id: 1, image: 'imgs/etra222.jpg', title: '', description: '' },
+            { id: 2, image: 'imgs/493690584_1064379248951068_3791806314464835859_n.jpg', title: 'تشكيلة ساندويتشات', description: 'نكهات متنوعة ترضي الجميع' },
+            { id: 3, image: 'imgs/481107802_1021570963231897_1989374855717209178_n.jpg', title: 'وجبات شهية', description: 'جودة عالية وسعر مناسب' }
           ];
           localStorage.setItem('sliderImages', JSON.stringify(sliderImages));
         }
@@ -1185,10 +1185,13 @@
       sliderImages.forEach((slide, index) => {
         const card = document.createElement('div');
         card.style.cssText = 'background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 12px; padding: 1.5rem;';
+        const imgSrc = typeof slide.image === 'string' && !/^data:|^https?:\/\//.test(slide.image)
+          ? slide.image.replace(/^\/+/, '')
+          : slide.image;
         card.innerHTML = `
           <div style="display: grid; grid-template-columns: 200px 1fr auto; gap: 1.5rem; align-items: center;">
             <div>
-              <img src="${slide.image}" alt="Slider ${index + 1}" style="width: 100%; height: 120px; object-fit: cover; border-radius: 8px; border: 1px solid rgba(255,255,255,0.2);" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=\\'http://www.w3.org/2000/svg\\' width=\\'200\\' height=\\'120\\'%3E%3Crect fill=\\'%23333\\' width=\\'200\\' height=\\'120\\'/%3E%3Ctext fill=\\'%23999\\' x=\\'50%25\\' y=\\'50%25\\' text-anchor=\\'middle\\' dy=\\'.3em\\'%3ENo Image%3C/text%3E%3C/svg%3E'">
+              <img src="${imgSrc}" alt="Slider ${index + 1}" style="width: 100%; height: 120px; object-fit: cover; border-radius: 8px; border: 1px solid rgba(255,255,255,0.2);" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=\\'http://www.w3.org/2000/svg\\' width=\\'200\\' height=\\'120\\'%3E%3Crect fill=\\'%23333\\' width=\\'200\\' height=\\'120\\'/%3E%3Ctext fill=\\'%23999\\' x=\\'50%25\\' y=\\'50%25\\' text-anchor=\\'middle\\' dy=\\'.3em\\'%3ENo Image%3C/text%3E%3C/svg%3E'">
             </div>
             <div>
               <h4 style="color: #fbbf24; margin: 0 0 0.5rem 0; font-size: 1.1rem;">${slide.title || 'بدون عنوان'}</h4>
